# MassGenQR

./: LICENSE  README.md  pyproject.toml
massgenqr/: __init__.py  cli.py
tests/: test_cli.py
